# trance

./: AGENT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  package.rs  rustfmt.toml
.github/workflows/: audit.yml  ci.yml  coverage.yml  deny.yml  release.yml  udeps.yml
assets/: beams.webm
crates/idle-dbus/: Cargo.toml
crates/idle-dbus/src/: client_tests.rs  status.rs
crates/idle-ipc/: Cargo.toml
crates/idle-ipc/src/: ffi_cell.rs  lib.rs  shm_tests.rs
crates/idle-upscaler/: Cargo.toml
crates/idle-upscaler/src/: cpu.rs  cpu_tests.rs  lib.rs  lib_tests.rs
crates/trance-dbus/: Cargo.toml
crates/trance-dbus/src/: client.rs  status.rs
crates/trance-gpu/: Cargo.toml
crates/trance-ipc/: Cargo.toml
crates/trance-ipc/src/: ffi_cell.rs  lib.rs  protocol.rs  shm.rs
crates/trance-upscaler/: Cargo.toml
crates/trance-upscaler/src/: lib.rs
crates/wayland-idle/: Cargo.toml
crates/wayland-idle/src/: lib.rs  monitor.rs
crates/wayland-present/: Cargo.toml
crates/wayland-present/src/: presenter.rs
docs/: BOUNDARIES.md  DBUS.md  NAMING.md  creating_plugins.md
idle-api/: Cargo.toml
idle-api/examples/: minimal_saver.rs
idle-api/src/: color.rs  layout.rs  lib.rs  rng.rs  terminal_cell.rs
idle-api/src/monitor/: bounds.rs  env.rs  mod.rs  tests.rs
idle-cli/: Cargo.toml  idle.1
idle-cli/debian/: changelog
idle-cli/src/: clean.rs  commands.rs  completion.rs  config.rs  doctor.rs  doctor_service.rs  interactive.rs  main.rs  self_update.rs  self_update_backend.rs  tests.rs  usage.rs
idle-cli/src/completions/: idle.bash  idle.fish  idle.nu  idle.zsh
idle-daemon/: Cargo.toml
idle-daemon/assets/: idle-daemon.1  idle-daemon.service  io.github.ubermetroid.trance.policy  trance-daemon.desktop
idle-daemon/assets/packaging/: user-service-lib.sh
idle-daemon/debian/: changelog
idle-daemon/src/: config.rs  config_watcher.rs  inhibit.rs  ipc_runner.rs  main.rs
idle-daemon/src/controller/: commands.rs  commands_tests.rs  mod.rs  status.rs
idle-daemon/src/daemon/: presentation.rs  runtime.rs
idle-plugins-all/: Cargo.toml
idle-plugins-all/debian/: changelog
idle-plugins-all/src/: lib.rs
idle-runner/: Cargo.toml
idle-runner/src/: idle_runner.rs  idle_runner_fullscreen.rs  lib.rs
idle-runner/src/core/: mod.rs  (+1 more)
trance-api/: Cargo.toml
trance-api/examples/: minimal_saver.rs
trance-api/src/: color.rs  logo_block.rs  monitor.rs  rng.rs  system_info.rs
trance-applet/: Cargo.toml  README.md
trance-applet/debian/: changelog
trance-applet/resources/: app.desktop
trance-applet/src/: config.rs  daemon_client.rs  i18n.rs
trance-cli/: Cargo.toml
trance-cli/debian/: changelog
trance-cli/src/: bug_report.rs  clean.rs  commands.rs  doctor.rs  doctor_checks.rs  doctor_fs.rs  doctor_service.rs  doctor_sys.rs  main.rs  self_update.rs  self_update_tests.rs  tests.rs  usage.rs
trance-cli/src/completions/: trance.bash  trance.zsh
trance-daemon/: Cargo.toml
trance-daemon/assets/: idlescreen-daemon.1  idlescreen-daemon.service  io.github.ubermetroid.trance.service  trance-daemon.service
trance-daemon/debian/: changelog  postinst  postrm  prerm
trance-daemon/rpm/: post.sh  posttrans.sh  preun.sh
trance-daemon/src/: config.rs  config_watcher.rs  daemon.rs  failsafe.rs  idle.rs  inhibit.rs  main.rs
trance-plugins-all/: Cargo.toml
trance-plugins-all/debian/: changelog
trance-plugins-all/src/: lib.rs
trance-runner/: Cargo.toml  LINE_LIMITS.md
trance-runner/src/: discovery.rs  launcher.rs  launcher_tests.rs  lib.rs  plugin_session.rs  trance_runner_fullscreen.rs
trance-tui/: Cargo.toml
trance-tui/src/: app.rs  main.rs  ui.rs
(+88 files in other folders)
